# italy-embassy

./: LICENSE  README.md  pyproject.toml
src/: check_dates.py  config.py  logger.py  notifier.py
